fix text align on partyRequestForm make deposit button

--- a/src/components/PartyRequestForm/PartyRequestForm.scss
+++ b/src/components/PartyRequestForm/PartyRequestForm.scss
@@ -107,4 +107,9 @@
       margin: spacing(8);
     }
   }
+
+  &__button {
+    padding-top: calc(#{spacing(4)} + 0.0625rem);
+    padding-bottom: calc(#{spacing(4)} - 0.0625rem);
+  }
 }
